# init-cpp

./: CMakeLists.txt  README.md  TODO.md  build.sh  run.sh  setupProject.py
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/App/: App.h
lib/src/: App.cpp
